--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
      http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.warranted</groupId>
-  <artifactId>warranted-java</artifactId>
+  <groupId>io.warranted.sdk</groupId>
+  <artifactId>warranted</artifactId>
   <version>1.0.0</version>
   <description>A Warranted helper library</description>
   <name>warranted-java</name>
