update package info

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
      http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>io.warranted.sdk</groupId>
+  <groupId>io.warranted</groupId>
   <artifactId>warranted</artifactId>
   <version>1.0.0</version>
   <description>A Warranted helper library</description>
